--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "sweetalert2": "^10.14.0",
         "vue-router": "^3.4.9",
         "vuex": "^3.6.0"
     }
