--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "dependencies": {
         "laravel-vue-pagination": "^2.3.1",
         "sweetalert2": "^10.14.0",
+        "vue-loaders": "^4.1.4",
         "vue-loading-overlay": "^3.4.2",
         "vue-router": "^3.4.9",
+        "vue-typical": "^1.4.0",
         "vue-ui-preloader": "^1.1.3",
         "vuex": "^3.6.0"
     }
